Removed border-collapse from CSS to avoid bug with IE10.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -197,7 +197,7 @@ background: linear-gradient(to right, rgba(0,0,0,0.25),rgba(0,0,0,1),rgba(0,0,0,
 table {
     border-top:1px solid #666666;
     border-left:1px solid #666666;
-    border-collapse: collapse;
+    border-spacing:0;
 	font-size: 13px;
     line-height: 1.4;
 }
@@ -288,22 +288,28 @@ table.fontS {
 	font-size: 10px;
 }	
 
-table.board_M td {
-    width: 20px;
-    height: 22px;
-    border: 1px solid black;
+table.board td {
+    border-right: 1px solid black;
+    border-bottom: 1px solid black;
     padding: 0;
-	font-size: 18px;
 	line-height: 1.1;
 }
-
-table.board_S td {
+table.M td{
+    width: 20px;
+    height: 22px;
+	font-size: 18px;
+}
+table.S td{
     width: 10px;
     height: 11px;
-    border: 1px solid black;
-    padding: 0;
 	font-size: 10px;
-	line-height: 1.1;
+}
+
+table.board td.gote {
+   border-right: 0px;
+   border-bottom: 0px;
+   border-top: 1px solid black;
+   border-left: 1px solid black;
 }
 
 td.gote {
